# otus-python-basic-homeworks

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pylint.yml  pytest.yml  run_tests.yml
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html
homework_06/: docker-compose.yaml
homework_06/blog/: config.py
homework_06/blog/migrations/versions/: 1d46d14a432c_initial_migration.py
homework_06/docker-build/blog/: Dockerfile
homework_07/app/catalog/: admin.py  models.py  views.py
homework_07/app/catalog/templates/: base_generic.html  index.html
homework_08/app/: Makefile
homework_08/app/catalog/: models.py  urls.py  views.py
homework_08/app/catalog/migrations/: 0001_initial.py
homework_08/app/catalog/templates/: base_generic.html
homework_09/app/catalog/: forms.py  models.py  urls.py  views.py
homework_09/app/catalog/migrations/: 0002_remove_bookinstance_imprint_and_more.py
homework_09/app/catalog/tests/: test_forms.py  test_models.py  test_views.py
homework_09/app/templates/registration/: pass_reset_confirm.html  pass_reset_done.html  pass_reset_form.html
homework_10/: Makefile  README_ABOUT_PROJECT.md  requirements.txt
homework_10/app/: Makefile
homework_10/app/catalog/: admin.py  forms.py  models.py  urls.py  views.py
myenv/: pyvenv.cfg
(+18 files in other folders)
